<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.leosap.multiplace.activities.LoginActivity"
    android:background="@color/colorBack">

    <!-- Login progress -->

        <ProgressBar
            android:id="@+id/vw_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="100dp"
            android:visibility="gone" />



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/vw_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <requestFocus/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorDark" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_confirm"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_log_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"

                    />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/bt_login"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_log_in"
                android:textStyle="bold"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorBack"
                android:onClick="onClick" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                facebook:com_facebook_login_text="@string/action_facebook_login"
                android:layout_height="50dp"
                android:textColor="@color/colorBack" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
