<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.leosap.multiplace.activities.LoginActivity"
    android:background="@color/colorBack">

    <!-- Login progress -->

        <ProgressBar
            android:id="@+id/vw_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="100dp"
            android:visibility="gone" />



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/vw_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <requestFocus/>

                <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_title"
                    android:imeOptions="actionUnspecified"


                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_image"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_image"
                android:textStyle="bold"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorBack"
                android:onClick="onClick" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/iv_thumb"
                android:src="@drawable/ic_places" />

            <Button
                android:id="@+id/bt_create"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_create"
                android:textStyle="bold"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorBack"
                android:onClick="onClick" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>
